syntax = "proto3";

package echo.v1;
import "google/api/annotations.proto";
import "validate/validate.proto";

message EchoRequest {
  string message = 1 [(validate.rules).string.min_len = 3];
}

message EchoResponse {
  string message = 1;
  map<string, string> client_metadata = 2;
}

service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse){
    option (google.api.http) = {
      post: "/v1/echo"
      body: "*"
    };
  };
}
